fix: removed fixed header on mobile

--- a/app/src/ui/style/pages.scss
+++ b/app/src/ui/style/pages.scss
@@ -6,7 +6,7 @@
   padding: 0 24px 40px;
   margin-top: 100px;
 
-  @media only screen and (max-width: $mobile) {margin-top: 72px;}
+  @media only screen and (max-width: $mobile) {margin-top: 0px;}
 }
 
 .page-wide {
